--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -47,23 +47,31 @@
         </div>
       </div>
       <div class="panel-body">
-        <form name="editForm" class="form-horizontal">
-          <div class="form-group" ng-class="{ 'has-error': editForm.app_name.$invalid &&
-                editForm.app_name.$dirty }">
-            <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Internal application name">App Name</label>
+        <form name="editForm" class="form-horizontal" novalidate>
+          <div class="form-group" ng-class="{'has-error': editForm.app_name.$invalid && editForm.app_name.$dirty}">
+            <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Internal application name">App Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="app_name" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name">
+              <input type="text" class="form-control" name="app_name" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" required>
+              <div class="error-messages" ng-messages="editForm.app_name.$error" role="alert">
+                <div ng-message="required" class="alert-text alert-text--required">You did not enter a field</div>
+                <div ng-message="minlength " class="alert-text alert-text--minlength">Your field is too short</div>
+                <div ng-message="maxlength " class="alert-text alert-text--maxlength">Your field is too long</div>
+              </div>
             </div>
           </div>
-          <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the application name should be associated with">Account</label>
+          <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()" ng-class="{ 'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty }">
+            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the application name should be associated with">Account *</label>
             <div class="col-sm-10">
-              <ui-select ng-model="model.account_id" theme="select2" ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id">
+              <input type="hidden" ng-model="model.account_id" name="accountId" required></input>
+              <ui-select ng-model="model.account_id" theme="select2" ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="account_id">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              <div class="has-error error-messages" ng-messages="editForm.accountId.$error" role="alert">
+                <div ng-message="required" class="alert-text alert-text--required">You did not selecte Account</div>
+              </div>
             </div>
           </div>
           <div class="form-group">
@@ -105,11 +113,13 @@
               </label>
             </div>
           </div>
-          <div class="form-group" ng-class="{ 'has-error': editForm.refresh_interval.$invalid &&
-                editForm.refresh_interval.$dirty }">
+          <div class="form-group" ng-class="{'has-error': editForm.refresh_interval.$invalid && editForm.refresh_interval.$dirty }">
             <label for="configuration_refresh_interval_sec" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="SDK configuration refresh interval in seconds">Configuration Refresh Interval (seconds)</label>
             <div class="col-sm-10">
-              <input type="number" class="form-control" name="refresh_interval" ng-disabled="_loading" ng-model="configuration.configuration_refresh_interval_sec" id="configuration_refresh_interval_sec">
+              <input type="number" class="form-control" name="refresh_interval" ng-disabled="_loading" ng-model="configuration.configuration_refresh_interval_sec" id="configuration_refresh_interval_sec" ng-min="0" ng-max="99999" required>
+              <div class="error-messages" ng-messages="editForm.refresh_interval.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': editForm.stale_timeout.$invalid &&
@@ -117,6 +127,9 @@
             <label for="configuration_stale_timeout_sec" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="SDK configuration stale timeout in seconds">Configuration Stale Timeout (seconds)</label>
             <div class="col-sm-10">
               <input type="number" class="form-control" name="stale_timeout" ng-disabled="_loading" ng-model="configuration.configuration_stale_timeout_sec" id="configuration_stale_timeout_sec">
+              <div class="error-messages" ng-messages="editForm.stale_timeout.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <div class="form-group">
@@ -157,7 +170,10 @@
                 editForm.reporting_interval.$dirty }">
             <label for="stats_reporting_interval_sec" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="SDK analytics reporting interval in seconds">Analytics Reporting Interval (seconds)</label>
             <div class="col-sm-10">
-              <input type="number" class="form-control" name="reporting_interval" ng-disabled="_loading" ng-model="configuration.stats_reporting_interval_sec" id="stats_reporting_interval_sec">
+              <input type="number" class="form-control" name="reporting_interval" ng-disabled="_loading" ng-model="configuration.stats_reporting_interval_sec" id="stats_reporting_interval_sec" min="0" max="99999">
+              <div class="error-messages" ng-messages="editForm.reporting_interval.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <div class="form-group">
@@ -199,14 +215,20 @@
             <label for="a_b_testing_origin_offload_ratio" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="A/B testing offloading ratio in %">A/B Testing Offloading Ratio In %</label>
             <div class="col-sm-10">
               <input type="number" min="0" max="100" class="form-control" name="ratio" ng-disabled="_loading" ng-model="configuration.a_b_testing_origin_offload_ratio" id="a_b_testing_origin_offload_ratio">
+              <div class="error-messages" ng-messages="editForm.ratio.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid &&
                                       editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" ng-disabled="_loading">
               </textarea>
+              <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <hr>
